# protodesk

./: .flake8  .gitignore  .goreleaser.yaml  Dockerfile  README.md  app.py  app.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app.AppDir/: AppRun  protodesk.desktop
flathub/: io.github.nemuelw.protodesk.desktop  io.github.nemuelw.protodesk.metainfo.xml
flatpak/: io.github.nemuelw.proton-desktop.yaml  proton-desktop.desktop
