[tool.poetry]
name = "protodesk"
version = "1.2.5"
description = "Unofficial desktop app for Proton"
authors = ["Nemuel Wainaina <nemuelwainaina@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.8.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
